--- a/fcc-test-suite-template-master (1)/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master (1)/fcc-test-suite-template-master/index.html
@@ -42,27 +42,71 @@
       </div>
     </div>
 
-    <section id="projects">
+    <section id="projects"  class="bg-slate-500">
       <div class="project-tile text-center pt-6 pb-4 mx-auto max-w-screen-xl">
         <h1 class="text-2xl underline">These are some of my projects</h1>
 
-        <div class="grid grid-rows-4 grid-flow-col gap-4">
-          <div class="card w-48 h-64 bg-gray-600">
-            <h3 class="text-center font-bold">title</h3>
+        <div  class="grid grid-cols-3 grid-flow-row gap-4 forces" >
+          <div class="card w-80 h-85 bg-gray-600">
+            <h3 class="text-center font-bold">Title</h3>
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
-            <a href="#" class="hover:underline">Project link</a>
+            <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage" id="profile-link" target="_blank" class="hover:underline">Project link</a>
+          </div>
+          <div class="card w-80 h-85 bg-gray-600" >
+            <h3 class="text-center font-bold">Title</h3>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
+            <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage" id="profile-link" target="_blank" class="hover:underline">Project link</a>
+          </div>
+          <div class="card w-80 h-85 bg-gray-600" >
+            <h3 class="text-center font-bold">Title</h3>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
+            <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage" id="profile-link" target="_blank" class="hover:underline">Project link</a>
+          </div>
+          <div class="card w-80 h-85 bg-gray-600" >
+            <h3 class="text-center font-bold">Title</h3>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
+            <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage" id="profile-link" target="_blank" class="hover:underline">Project link</a>
+          </div>
+          <div class="card w-80 h-85 bg-gray-600" >
+            <h3 class="text-center font-bold">Title</h3>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
+            <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage" id="profile-link" target="_blank" class="hover:underline">Project link</a>
+          </div>
+          <div class="card w-80 h-85 bg-gray-600" >
+            <h3 class="text-center font-bold">Title</h3>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
+            <a href="https://www.freecodecamp.org/learn/responsive-web-design/responsive-web-design-projects/build-a-personal-portfolio-webpage" id="profile-link" target="_blank" class="hover:underline">Project link</a>
           </div>
 
-          <div class="card w-48 h-64 bg-gray-600">
-            <h3 class="text-center font-bold">title</h3>
-            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="">
-            <a href="#" class="hover:underline">Project link</a>
+          <div class="center" >
+            <button type="button" class=" inline-block px-6 py-2.5 bg-gray-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Show All ></button>
           </div>
           
         </div>
       </div>
 
     </section>
+
+    <div class="w-screen bg-gray-800 ">
+      <!-- ... -->
+      <p class="font-sans text-white text-center px-5 py-5 text-5xl">Let's work together...</p>
+      <p class="font-sans text-white text-center px-5 py-5 font-thin italic text-lg">How do you take your coffee?</p>
+      <div class="items-center justify-between">
+        <ul class="list-none flex flex-row ">
+          <li class="text-gray-50  text-center mx-4 my-4 items-center">Facebook</li>
+          <li class="text-gray-50  text-center mx-4 my-4 items-center">Twitter</li>
+          <li class="text-gray-50  text-center mx-4 my-4 items-center">Github</li>
+          <li class="text-gray-50  text-center mx-4 my-4 items-center">Send a mail</li>
+          <li class="text-gray-50  text-center mx-4 my-4 items-center">Call me</li>
+        </ul>
+      </div>
+
+      <div class="bg-red-700 h-1"></div>
+      <div class="bottom flex flex-row justify-between p-3">
+        <p class="text-white">**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+        <p class="text-white">© Created for freeCodeCamp </p>
+      </div>
+    </div>
 
     <!--free code camp js-->
     <script  src="js/index.js"></script>
